# multirotor_manipulation_and_control_framework

./: CMakeLists.txt  CMakeLists.txt.in  TODO  configure  package.xml  package.xml.in  plugin.xml  setup.py
cmake/: FindQwt.cmake
include/multirotor_manipulation_and_control_framework/: CMakeLists.txt  arm_controller.h  arm_parser.h  generic_arm.cpp  generic_arm.h  pixhawk_parser.cpp  pixhawk_parser.h  point3d_estimator.h  quadcopter_parser.h  simple_arm.cpp  simple_arm.h  trajectory_tracking_control.cpp  trajectory_tracking_control.h  utils.h
include/multirotor_manipulation_and_control_framework/arm_controllers/: CMakeLists.txt  arm_controller.h
include/multirotor_manipulation_and_control_framework/arm_parsers/: CMakeLists.txt  arm_parser.h  generic_arm.h  simple_arm.cpp  simple_arm.h
include/multirotor_manipulation_and_control_framework/dynamixelsdk/: dxl_hal_usb2dynamixel.C  dynamixel.C  dynamixel.h
include/multirotor_manipulation_and_control_framework/filters/: CMakeLists.txt  point3d_estimator.cpp  point3d_estimator.h  state_estimator.h
include/multirotor_manipulation_and_control_framework/quadcopter_controllers/: CMakeLists.txt  quadcopter_controller.h  trajectory_tracking_control.cpp  trajectory_tracking_control.h
include/multirotor_manipulation_and_control_framework/quadcopter_parsers/: CMakeLists.txt  pixhawk_parser.cpp  pixhawk_parser.h  quadcopter_parser.h
include/multirotor_manipulation_and_control_framework/utils/: utils.h
launch/arm_launch_files/: cyton_parser.launch  simple_arm_parser.launch
launch/quadcopter_parser_launch_files/: pixhawk_parser.launch
msg/: Barometer.msg  BodyState.msg  MotorPwm.msg  QuadControllerGains.msg  WindSpeed.msg  multirotor_manipulator_commands.msg  multirotor_manipulator_state.msg  multirotor_quad_state.msg
scripts/: multirotor_client
src/arm_examples/: cyton_arm_example.cpp  simple_arm_example.cpp
src/onboard_node/: onboard_nodehandler.cpp  onboard_nodehandler.h
src/qt_gui_files/: multirotor_client_gui.cpp  multirotor_client_gui.h  (+1 more)
test/: utest.cpp
(+1 files in other folders)
